--- a/src/app/all-products/all-products.component.html
+++ b/src/app/all-products/all-products.component.html
@@ -9,18 +9,18 @@
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    <div class="col mb-5">
-                        <div class="card h-100" routerLink="view/1">
+                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" >
+                    <div class="col mb-5" *ngFor="let products of allProducts">
+                        <div class="card h-100" routerLink="view/{{products.id}}" >
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <img height="230px" class="card-img-top" [src]="products.image" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Fancy Product</h5>
+                                    <h5 class="fw-bolder">{{products.title}}</h5>
                                     <!-- Product price-->
-                                    $40.00 - $80.00
+                                    ${{products.price}}
                                 </div>
                             </div>
                             <!-- Product actions-->
