--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="row p-5 rounded shadow">
      <h1 style="color: white; stroke:2px black;" class="text-center mb-5">Login</h1>
      <div class="col-lg-6 ">
-         <img class="w-75 mt-2" src="https://img.freepik.com/free-vector/man-going-trip-booking-tour-online-guy-sitting-front-computer-table-looking-voyage-summer-vacation_575670-946.jpg" alt="">
+         <img class="w-75 mt-2" src="https://cdn.pixabay.com/photo/2020/10/23/20/31/man-5679897_1280.png" alt="">
      </div>
      <div class="col-lg-6">
          <form style="border: 1px solid black;" class="rounded" action="">
