--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,11 +8,11 @@
      <div class="col-lg-6">
          <form style="border: 1px solid black;" class="rounded" action="">
              <div class="d-flex justify-content-center align-items-center flex-column p-5 mt-5">
-                 <input style="border: 0px; border-bottom: 1px solid;" type="text" name="uname" class="form-control mt-3" placeholder="name">
                  <input style="border: 0px; border-bottom: 1px solid;" type="email" name="email" class="form-control mt-3" placeholder="email">
                  <input style="border: 0px; border-bottom: 1px solid;" type="text" name="pswd" class="form-control mt-3" placeholder="password">
                  <input type="submit" value="Submit" class="btn btn-outline-dark mt-3">
              </div>
+             <p class="text-center">New user?<a routerLink="/user/register">Register</a></p>
          </form>
      </div>
     </div>
