--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="user/cart">Cart</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="user/login">Login</a>
+          </li>
         </ul>
         
       </div>
