--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,18 +1,34 @@
 <div style="margin-top: 100px; padding:0px 300px 100px 200px;"  >
     
    <div class="row p-5 rounded shadow">
-    <h1 class="text-center mb-5">Register</h1>
+    <h1 style="color: black;" class="text-center mb-5">Register</h1>
     <div class="col-lg-6 ">
         <img class="w-75 mt-2" src="https://cdn.pixabay.com/photo/2020/10/23/20/31/man-5679897_1280.png" alt="">
     </div>
     <div class="col-lg-6">
-        <form style="border: 1px solid black;" class="rounded" action="">
+        <form [formGroup]="registerForm" style="border: 1px solid black;" class="rounded" action="">
             <div class="d-flex justify-content-center align-items-center flex-column p-5 mt-5">
-                <input style="border: 0px; border-bottom: 1px solid;" type="text" name="uname" class="form-control mt-3" placeholder="name">
-                <input style="border: 0px; border-bottom: 1px solid;" type="email" name="email" class="form-control mt-3" placeholder="email">
-                <input style="border: 0px; border-bottom: 1px solid;" type="text" name="pswd" class="form-control mt-3" placeholder="password">
-                <input type="submit" value="Submit" class="btn btn-outline-dark mt-3">
+                <input style="border: 0px; border-bottom: 1px solid;" type="text" class="form-control mt-3" placeholder="name" name="username" formControlName="username">
+                <!-- validation -->
+                <div *ngIf="registerForm.get('username')?.errors && registerForm.get('username')?.touched" class="mb-3 text-danger fw-bolder">
+                    *Invalid username
+                </div>
+
+                <input style="border: 0px; border-bottom: 1px solid;" type="email" name="email" class="form-control mt-3" placeholder="email" formControlName="email">
+                <!-- validation -->
+                <div *ngIf="registerForm.get('email')?.errors && registerForm.get('email')?.touched" class="mb-3 text-danger fw-bolder">
+                    *Invalid email
+                </div>
+
+                <input style="border: 0px; border-bottom: 1px solid;" type="text" name="pswd" class="form-control mt-3" placeholder="password"  formControlName="password">
+                <!-- validation -->
+                <div *ngIf="registerForm.get('password')?.errors && registerForm.get('password')?.touched" class="mb-3 text-danger fw-bolder">
+                    *Invalid password
+                </div>
+
+                <button (click)="register()" class="btn btn-outline-dark mt-3">Submit</button>
             </div>
+            <p class="text-center">New user?<a routerLink="/user/login">Login</a></p>
         </form>
     </div>
    </div>
