--- a/src/app/view-project/view-project.component.html
+++ b/src/app/view-project/view-project.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div style="margin-top: 60px;">
     <section class="py-5">
         <div class="container px-4 px-lg-5 my-5">
