--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav style="z-index: 1;" class="navbar navbar-expand-lg bg-body-tertiary position-fixed w-100 shadow p-4">
+<nav style="z-index: 1;" class="navbar navbar-expand-lg bg-body-tertiary w-100 shadow p-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><i class="fa-sharp fa-solid fa-truck-fast"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,10 +15,10 @@
             <a class="nav-link active" aria-current="page" routerLink="">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="user/wishlist">wishlist</a>
+            <a class="nav-link" routerLink="user/wishlist">wishlist <span>{{wishlistCount}}</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="user/cart">Cart</a>
+            <a class="nav-link" routerLink="user/cart">Cart <span>{{cartCount}}</span></a>
           </li>
           <li *ngIf="!loginUsername" class="nav-item">
             <a class="nav-link" routerLink="user/login">Login</a>
