--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,2 +1,7 @@
 <app-header></app-header>
-<p>checkout works!</p>
+<div style="margin-top: 80px;" class="d-flex justify-content-center align-items-center flex-column w-100">
+    <div class="Delivery mt-5">
+        <h1>Delivery Details</h1>
+        
+    </div>
+</div>
