--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
 <div style="margin-top: 60px;">
-    <div class="empty-cart mt-5 mb-5 d-flex justify-content-center align-items-center w-100">
+    <div *ngIf="cartItems.length==0" class="empty-cart mt-5 mb-5 d-flex justify-content-center align-items-center w-100">
         <img routerLink="" style="cursor: pointer;" src="https://i.pinimg.com/originals/82/e6/4f/82e64ffa12370f75a4d4a05c3870a894.gif" alt="">
     </div>
 
-    <div class="cart">
+    <div *ngIf="cartItems.length>0"  class="cart">
         <div class="container px-4 px-lg-5 mt-5">
             <h1>Your Summary.....</h1>
             <div class="row">
@@ -21,30 +21,34 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>Samsung galaxy s23 Ultra</td>
-                                <td><img class="w-50" src="https://www.91-cdn.com/hub/wp-content/uploads/2023/12/Samsung-Galaxy-S24-Ultra.png?tr=w-360,c-at_max,q-100,dpr-2,e-sharpen" alt=""></td>
+                            <tr *ngFor="let product of cartItems;let i = index">
+                                <td>{{i+1}}</td>
+                                <td>{{product.title.slice(0,20)}}</td>
+                                <td><img class="w-50" [src]="product.image" alt=""></td>
                                 <td>
                                     <div class="d-flex">
-                                        <button class="btn fw-bolder">-</button>
-                                        <input class="w-25 text-center form-control" type="text" placeholder="1" readonly>
-                                        <button class="btn fw-bolder">+</button>
+                                        <button (click)="decrementCart(product._id)" class="btn fw-bolder">-</button>
+                                        <input class="w-25 text-center form-control w-50" type="text" [placeholder]="product.quantity" readonly>
+                                        <button (click)="incrementCart(product._id)" class="btn fw-bolder">+</button>
                                     </div>
                                 </td>
-                                <td>123000</td>
+                                <td>{{product.grandTotal}}</td>
                                 <td>
-                                    <i class="fa-solid fa-trash text-danger"></i>
+                                    <i (click)="removeItem(product._id)" class="fa-solid fa-trash text-danger"></i>
                                 </td>
                             </tr>
                         </tbody>
+                    </div>
+                    <div class="actions float-right w-100">
+                        <a (click)="emptyCart()" class="float-end btn btn-outline-danger">Empty Cart</a>
+                        <a  routerLink="" class="float-end btn btn-outline-success me-3">Add more items</a>
                     </div>
                     
                 </div>
                 <div class="col-lg-4">
                    <div class="border p-3">
-                        <h3>Your Total: <span class="text-danger">$230</span></h3>
-                        <button class="btn btn-primary w-100 mt-4">Checkout</button>
+                        <h3>Your Total: <span class="text-danger">${{cartTotalPrice}}</span></h3>
+                        <a (click)="checkout()" routerLink="/user/checkout" class="btn btn btn-outline-dark w-100 mt-4">Checkout</a>
                    </div>
                 </div>
             </div>
